# Impedance-Clamp-Meter

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  README.md  cmake_sources.cmake  configs.cmake  openocd.cfg  sam4e.cmake  workarounds.txt
build-release/: .ninja_deps  .ninja_log  CMakeCache.txt  ClampMeter.map  build.ninja  cmake_install.cmake  compile_commands.json
build-release/.cmake/api/v1/reply/: directory-src.asf_lib-Release-95a5cfe239666c8ea9e1.json  directory-src.clamp_meter-Release-eae1c7446c6238e4cc1a.json  toolchains-v1-b421e68ef952ce771b67.json
build-release/src/asf_lib/: cmake_install.cmake
build-release/src/clamp_meter/: cmake_install.cmake
build-release/src/test/: cmake_install.cmake
src/: app_controller.hpp  clamp_meter_driver.cpp  clamp_meter_driver.hpp  compiler_compatibility_workaround.hpp  freertos_handlers.c  freertos_handlers.h  hclamp_meter.hpp  main.cpp  main_blinky.c  main_blinky.h  maintask.cpp  maintask.hpp  project_configs.hpp  static_string.hpp  tasks_controller.hpp  testfile.c
src/adc/: mcp3462_driver.cpp  mcp3462_driver.hpp
src/analog/adc/: mcp3462_driver.cpp  mcp3462_driver.hpp
src/analog/dsp/: clamp_meter_calculator.cpp  clamp_meter_calculator.hpp  clamp_sensor_calculator.cpp  clamp_sensor_calculator.hpp  deviation_calculator.hpp  dsp_resources.cpp  dsp_resources.hpp  filter.cpp  filter.hpp  iq_calculator.hpp  sensor.cpp  sensor.hpp  shunt_sensor_calculator.cpp  shunt_sensor_calculator.hpp  voltage_sensor_calculator.cpp  voltage_sensor_calculator.hpp
src/analog/generator/: output_generator.cpp  output_generator.hpp
src/analog/sensor/: calibrations.hpp  sensor_preamp.cpp  sensor_preamp.hpp
src/asf_lib/: CMakeLists.txt  sources.cmake
src/asf_lib/src/: asf.h
src/asf_lib/src/ASF/common/services/clock/: genclk.h  pll.h  sysclk.h
src/asf_lib/src/ASF/common/services/delay/: delay.h
src/asf_lib/src/ASF/common/services/spi/: spi_master.h
src/asf_lib/src/ASF/common/services/spi/sam_spi/: spi_master.c  spi_master.h
src/asf_lib/src/ASF/common/utils/interrupt/: interrupt_sam_nvic.h
src/asf_lib/src/ASF/sam/drivers/dacc/: dacc.c
src/asf_lib/src/ASF/sam/drivers/efc/: efc.c
src/asf_lib/src/ASF/sam/drivers/pio/: pio.c  pio.h  pio_handler.c
src/asf_lib/src/ASF/sam/drivers/spi/: spi.h
src/asf_lib/src/ASF/sam/drivers/tc/: tc.h
src/asf_lib/src/ASF/sam/drivers/twi/: twi.c
src/asf_lib/src/ASF/sam/drivers/wdt/: wdt.c
src/asf_lib/src/ASF/sam/services/flash_efc/: flash_efc.c
src/asf_lib/src/ASF/sam/utils/cmsis/sam4e/include/component/: pio.h  rstc.h  smc.h  supc.h
src/asf_lib/src/ASF/sam/utils/cmsis/sam4e/include/instance/: pioa.h  piob.h  pioc.h  piod.h  pioe.h
src/asf_lib/src/ASF/sam/utils/cmsis/sam4e/include/pio/: sam4e16c.h  sam4e16cb.h  sam4e16e.h  sam4e8c.h  sam4e8cb.h  sam4e8e.h
src/asf_lib/src/ASF/sam/utils/cmsis/sam4e/source/templates/: system_sam4e.c  system_sam4e.h
src/clamp_meter/: CMakeLists.txt  DSP_functions.c  DSP_functions.h  ILI9486_config.h  ILI9486_ctrl.c  ILI9486_fonts.h  ILI9486_private.h  ILI9486_public.h  LCD1608.c  LCD1608.h  MCP23016.c  MCP23016.h  MCP3462.c  MCP3462.h  display_data_sender.c  display_data_sender.h  external_periph_ctrl.c  external_periph_ctrl.h  keyboard.c  keyboard.h  menu.c  menu.h  menu_calibration.c  menu_calibration.h  menu_ili9486.c  menu_ili9486.h  menu_ili9486_kbrd_mngr.c  menu_ili9486_kbrd_mngr.h  menu_types_ili9486.h  signal_conditioning.c  signal_conditioning.h  sources.cmake  system.c  system.h  system_init.c  system_init.h  twi_pdc.c  twi_pdc.h
src/clamp_meter_drawer/: clamp_meter_drawing.cpp  clamp_meter_drawing.hpp  display_drawer.cpp  display_drawer.hpp  ili9486_driver.cpp  ili9486_driver.hpp
src/clamp_sensor/: clamp_sensor.cpp  clamp_sensor.hpp
src/concepts/: clamp_meter_concepts.hpp
src/drivers/: CMakeLists.txt  MCP23016.c  MCP23016.h  encoder.c  encoder.h  sources.cmake  system_init.c  system_init.h  twi_pdc.c  twi_pdc.h
src/freertos_cpp_wrappers/queue/: queue.cpp  queue.hpp
src/freertos_cpp_wrappers/semaphore/: semaphore.hpp
src/freertos_cpp_wrappers/task/: task.cpp  task.hpp
src/ili9486/: font.hpp  ili9486.cpp  ili9486_driver.cpp  ili9486_driver.hpp
src/keyboard/: keyboard.cpp  keyboard.hpp  mcp23016_driver.cpp  mcp23016_driver.hpp  pin.hpp
src/keyboard_fast/: button.cpp  button.hpp  encoder.cpp  encoder.hpp  keyboard_fast.hpp  mcp23016_driver_fast.cpp  mcp23016_driver_fast.hpp
src/main_task/: cmaintask.c  cmaintask.h  main_task.cpp  main_task.hpp
src/menu/: menu.cpp  menu.hpp  menu_model.hpp  menu_model_dialog.hpp  menu_model_drawer.cpp  menu_model_drawer.hpp  menu_model_handler.cpp  menu_model_handler.hpp  menu_model_item.cpp  menu_model_item.hpp  page.cpp  page.hpp  valuecursor.cpp  valuecursor.hpp
src/misc/: exception_handlers.c  freertos_handlers.c  project_configs.hpp
src/mutex/: semaphore.cpp  semaphore.hpp
src/nvm_controller/: flash_controller.hpp
src/peripherals/: HVPowerSupply.cpp  HVPowerSupply.hpp  OutputRelay.cpp  OutputRelay.hpp  abstract_peripheral.cpp  abstract_peripheral.hpp
src/peripherals/analog_switch/: analog_switch.hpp
src/peripherals/clamp/: clamp_sensor.cpp  clamp_sensor.hpp
src/peripherals/discrete_drivers/: DG442.cpp  DG442.hpp
src/peripherals/discrete_drivers/DG442/: DG442.hpp
src/peripherals/discrete_drivers/buzzer/: buzzer.cpp  buzzer.hpp  buzzer_with_task.hpp
src/peripherals/gain_control/: amplifier_controller.hpp  automatic_gain_controller.hpp  gain_controller.hpp
src/peripherals/internal_peripherals_drivers/: pio_controller.cpp  pio_controller.hpp
src/peripherals/shunt/: shunt_sensor.cpp  shunt_sensor.hpp
src/test/: CMakeLists.txt  testfile.c  testfile.h
src/tests/: agc_tests.hpp  amplifier_controller_tests.hpp
src/timer/: timer.cpp  timer.hpp
src/utilities/: string_converter.hpp  universal_type.hpp
